kube-manifests/azure-golangsdk-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-go-app
spec:
  selector:
    matchLabels:
      app: azure-go-app
  replicas: 2
  template:
    metadata:
      labels:
        app: azure-go-app
    spec:
      containers:
        - name: azure-go-app
          image: "azconfdemoacr01.azurecr.io/azuregolangimagesazuregolangsdkbackend:v1"
          ports:
            - name: go-app-port
              containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
spec:
  selector:
    matchLabels:
      app: azure-go-app
  replicas: 2
  template:
    metadata:
      labels:
        app: azure-go-app
    spec:
      containers:
        - name: webui
          image: "azconfdemoacr01.azurecr.io/azuregolangimages/azuresdkwebuifrontend:v1"
          ports:
            - name: web-port
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: azure-go-app
spec:
  selector:
    app: azure-go-app
  ports:
  - port: 8000
    targetPort: go-app-port

---
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  selector:
    app: azure-go-app
  ports:
  - port: 8080
    targetPort: web-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  labels:
    name: az-app-ig
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: azure-go-app
              port:
                name: go-app-port
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: webui
              port:
                name: web-port
